--- a/our-girls.html
+++ b/our-girls.html
@@ -501,7 +501,25 @@ Our beautifull and experienced therapist provides you complete satisfaction and 
     <!-- Loading Theme JS -->
     <script src="assets\js\main.js"></script>
     <script src="assets\js\switch-style.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+
 
 </body>
+<script>
+    $(document).ready(function () {
+        $(".fancybox").fancybox({
+            openEffect: "none",
+            closeEffect: "none"
+        });
+
+        $(".zoom").hover(function () {
+
+            $(this).addClass('transition');
+        }, function () {
+
+            $(this).removeClass('transition');
+        });
+    });
+</script>
 
 </html>
