--- a/our-girls.html
+++ b/our-girls.html
@@ -39,7 +39,81 @@
     <!-- Color Scheme CSS -->
     <link href="assets\css\niobe_color_pink.css" rel="stylesheet" type="text/css">
     <link href="assets\css\switch-style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+    media="screen">
 
+<style>
+    .textcc {
+        text-align: center;
+    }
+
+    h2 {
+        font-family: 'Great Vibes', cursive;
+    }
+
+    @media (max-width: 468px) {
+        .textcc {
+            font-size: 1.1rem !important;
+            text-align: center !important;
+        }
+    }
+
+    ul {
+        list-style: inherit;
+    }
+
+    #demo {
+        height: 100%;
+        position: relative;
+        overflow: hidden;
+    }
+
+
+    .green {
+        background-color: #6fb936;
+    }
+
+    .thumb {
+        margin-bottom: 30px;
+    }
+
+    .page-top {
+        margin-top: 85px;
+    }
+
+
+    img.zoom {
+        width: 100%;
+        height: 200px;
+        border-radius: 5px;
+        object-fit: cover;
+        -webkit-transition: all .3s ease-in-out;
+        -moz-transition: all .3s ease-in-out;
+        -o-transition: all .3s ease-in-out;
+        -ms-transition: all .3s ease-in-out;
+    }
+
+
+    .transition {
+        -webkit-transform: scale(1.2);
+        -moz-transform: scale(1.2);
+        -o-transform: scale(1.2);
+        transform: scale(1.2);
+    }
+
+    .modal-header {
+
+        border-bottom: none;
+    }
+
+    .modal-title {
+        color: #000;
+    }
+
+    .modal-footer {
+        display: none;
+    }
+</style>
 
     <style>
         .textcc {
