--- a/our-girls.html
+++ b/our-girls.html
@@ -373,32 +373,32 @@ Our beautifull and experienced therapist provides you complete satisfaction and 
 
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="/assets/images/gallery/1.jpeg" class="fancybox" rel="ligthbox">
-                        <img src="/assets/images/gallery/1.jpeg" class="zoom img-fluid " alt="">
+                    <a href="assets/images/Yukii.png" class="fancybox" rel="ligthbox">
+                        <img src="assets/images/Yukii.png" class="zoom img-fluid " alt="">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="/assets/images/gallery/2.jpeg" class="fancybox" rel="ligthbox">
-                        <img src="/assets/images/gallery/2.jpeg" class="zoom img-fluid " alt="">
+                    <a href="assets/images/Mew.png" class="fancybox" rel="ligthbox">
+                        <img src="assets/images/Mew.png" class="zoom img-fluid " alt="">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="/assets/images/gallery/3.jpeg" class="fancybox" rel="ligthbox">
-                        <img src="/assets/images/gallery/3.jpeg" class="zoom img-fluid " alt="">
+                    <a href="assets/images/Naam.png" class="fancybox" rel="ligthbox">
+                        <img src="assets/images/Naam.png" class="zoom img-fluid " alt="">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="/assets/images/gallery/4.jpeg" class="fancybox" rel="ligthbox">
-                        <img src="/assets/images/gallery/4.jpeg" class="zoom img-fluid " alt="">
+                    <a href="assets/images/Saa.png" class="fancybox" rel="ligthbox">
+                        <img src="assets/images/Saa.png" class="zoom img-fluid " alt="">
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="/assets/images/gallery/5.jpeg" class="fancybox" rel="ligthbox">
-                        <img src="/assets/images/gallery/5.jpeg" class="zoom img-fluid " alt="">
+                    <a href="assets/images/far.png" class="fancybox" rel="ligthbox">
+                        <img src="assets/images/far.png" class="zoom img-fluid " alt="">
                     </a>
                 </div>
 
