--- a/our-girls.html
+++ b/our-girls.html
@@ -198,26 +198,7 @@
     <!-- //Navigation End -->
 
     <!-- Section - Treatments Start -->
-    <section id="therapists" class="bg-gray-light-2">
-        <div class="container">
-            <div class="row no-padding-rl no-padding-top padding-8">
-                <div class="col-md-6 col-md-offset-3 text-center">
-                    <h3
-                        class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
-                        Our Girls</h3>
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        <i>Outcall massages pattaya provides you wide range of beautifull girls at your doorstep.we offers you to select beautifull girl/lady of your own choice.lady will reach your destination in about 15-30 minutes according to distance and traffic.
-Our beautifull and experienced therapist provides you complete satisfaction and makes your time more special.Their magical fingers revitalize your mind body and soul.</i></p>
-                </div>
-                <!-- //.col-md-6 -->
-            </div>
-        
-        <!-- //.row -->
-
-        <!-- //.container -->
-    </section>
-
-    <section id="therapists" class="bg-gray-light-2">
+        <section id="therapists" class="bg-gray-light-2">
         <!-- Page Content -->
 
 
@@ -227,6 +208,9 @@ Our beautifull and experienced therapist provides you complete satisfaction and 
 
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-3 text-center">
+                    <h3
+                        class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
+                        Gallery</h3>
                     
                     <!-- <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         <i>SHS is
