--- a/body-massage-pattaya.html
+++ b/body-massage-pattaya.html
@@ -165,6 +165,13 @@
                         Schedule an appointment now for authentic massage or the best home massage in Pattaya – the
                         massage of your choice and enjoy the day and a way of refreshed moments through well-rejuvenated
                         mind and body. </p>
+
+                        <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
+                            <strong>Contact Us</strong></p>
+
+                            <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
+                                +66 84-270-5334
+ (Whatsapp/line/wechat) </p>
                 </div>
                 <!-- //.col-md-6 -->
             </div>
