--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -161,6 +161,13 @@
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         Feel free to contact us for the <strong>best and authentic Thai massage</strong> anywhere in
                         Pattaya right to your home and hotel room. </p>
+
+                        <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
+                            <strong>Contact Us</strong></p>
+
+                            <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
+                                +66 84-270-5334
+ (Whatsapp/line/wechat) </p>
                 </div>
                 <!-- //.col-md-6 -->
             </div>
