--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -163,6 +163,13 @@
                         Thank you for choosing us.
                         Sensational home spa by may
                         Best outcall massage services in pattaya</p>
+
+                        <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
+                            <strong>Contact Us</strong></p>
+
+                            <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
+                                +66 84-270-5334
+ (Whatsapp/line/wechat) </p>
                 </div>
                 <!-- //.col-md-6 -->
             </div>
