--- a/index.html
+++ b/index.html
@@ -191,26 +191,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-md-offset-2 text-center">
-                    <h1 class="title-underline-thick-base-color">Outcall Massage Pattaya</h1>
+                    <h1 class="title-underline-thick-base-color">OUTCALL MASSAGE PATTAYA</h1>
+					<p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
+                        <i>
+                            TIRED TO GOO OUT  ? LOOKING FOR  BEST OUTCALL MASSAGE/SPA SERVICES IN PATTAYA?
+
+                        </i></p>
                     <br>
 					<br>
 					<br>
                     <p
                         class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">
-                        Outcall Massage Pattaya has been serving the community and beyond for over 10 years. Our services are
-                        available through out pattaya, Jomtien, Naklua and East Pattaya, We aim to have the girl of your
-                        choice, with you, within 15 minutes. Our top priority is customer satisfaction. We are of the
-                        firm belief that the ideal location of a relaxing spa massage is in the warmth, safety and
-                        comfort of home.
+                        WELCOME TO SENSATIONAL HOME SPA BY MAY, AN EXPERT OUTCALL MASSAGE SERVICES IN PATTAYA.OUTCALL MASSAGES PATTAYA PROVIDES YOU HOME/HOTEL MASSAGE SERVICES THROUGHOUT PATTAYA CITY. OUTCALL MASSAGES PATTAYA PROVIDES YOU AUTHENTIC MASSAGES/SPA  AT YOUR OWN HOME/HOTEL ROOM.
 
                     </p>
 					<br>
-					<p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">Are you looking for a relaxing Outcall Massage service in Pattaya? Outcall Massage Pattaya is the very best choice for you. Go into to the globe of fragrant massage therapy with Outcall Massage Pattaya, which revitalizes your mind, heart and soul in relaxing style. At Outcall Massage Pattaya, we are committed to providing you with premium quality young girls as well as who will make your remain in Pattaya one that will certainly never be neglected. Whether you desire a girl for a few hours, the night, a whole day or longer we will do whatever possible to locate you the best companion.</p>
+					<p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">GET INTO THE GLOBE OF FRAGRANT MASSAGE THERAPY WITH OUTCALL MASSAGES PATTAYA.OUR SERVICES REVITALIZES YOUR MIND,BODY AND SOUL.OUTCALL MASSAGES PATTAYA PROVIDES YOU OPTION TO CHOOSE LADY OF YOUR OWN CHOICE FROM THE WIDE RANGE OF BEAUTIFULL ,YOUNG AND PREMIUM GIRLS. OUR GIRLS ARE READY TO SERVE YOU 24 X 7.THE MAGICAL FINGERS OF OUR BEAUTIFULL THERAPIST  MAKE YOUR MIND AND BODY COMPLETELY RELAX.</p>
 					<br>
-					<p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">Outcall Massage Pattaya is a beautiful, easy suggestion with special needs in mind. At Outcall Massage Pattaya your wonderful massage girl will certainly be her own basket of treats including oils, powders as well as aromas. Every magnificent girl is educated to use an extraordinary remarkable massage to make you feel entirely relaxed in the privacy as well as comfort of your room.</p>
+					<p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">OUTCALL MASSAGES PATTAYA IS THE MOST TRENDING SERVICES WHICH PROVIDES YOU COMPLETE RELAXATION AT YOUR OWN HOTEL ROOM/HOME OR CONDO WITH COMPLETE PRIVACY.WE HAVE BUNCH OF BEAUTIFUL PATTAYA GIRLS WITH EXPERIENCE OF  5 YEARS IN DIFFERENT TYPES OF  BODY MASSAGES ,WHICH MAKES YOUR TIME MORE RELAXING AND UNFORGETTABLE.OUR PROFESSIONAL AND TRAINED THERAPIST USE AN EXTRAORDINARY & REMARKABLE MASSAGETO MAKE YOU FEEL ENTIRELY RELAXED WITH DISCREETED PRIVACY AS WELL AS COMFORT OF YOUR HOTEL/HOME ROOM.</p>
 					<br>
-					<p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">Much more than simply an Outcall Massage Services Pattaya, Rather an area where one's dreams truly do become a reality and your fulfillment is ensured! The Outcall Massage Pattaya is the leading place in Pattaya Many of our clients informs us that several of one of the most unforgettable minutes of their lives has actually been invested with a set of Pattaya girls from the Outcall Massage Pattaya. It is the home to a wonderfully varied option of talented girls. Outcall Massage Pattaya can use you solution locally in spotlessly clean accommodation or in your own residence, condo or hotel. Our girls are delighted to fulfill your every demand from working as neighborhood overviews, companions, supper dates or more intimate wishes engage in between consenting grownups.</p>
-                </div>
+					<p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">OUTCALL MASSAGES PATTAYA PROVIDES YOU DIFFERENT TYPES OF FULL BODY MASSAGES LIKE- THAI MASSAGE , OIL MASSAGE ,AROMA MASSAGE,BALINESE MASSAGE,COUPLE MASSAGES,TRADITIONAL FOOT  AND BACK MASSAGES.</p>
+                <p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">OUR OUTCALL MASSAGE SERVICES ARE AVAILABLE THROUGH OUT PATTAYA.AREAS INCLUDING (JOMTEIN,NAKLUA,BANG-LAMUNG,EAST ,NORTH AND SOUTH PATTAYA )OUR TOP PRIORITY IS CUSTOMER SATISFACTION.WE ARE OF THE FIRM BELIEF THAT THE IDEAL LOCATION OF A RELAXING OUTCALL MASSAGE ANS SPA IS IN THE WARMTH,SAFETY AND COMFORT OF HOME.</p>
+				</div>
                 <!-- //.col-md-8 -->
             </div>
             <!-- //.row -->
