--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-md-offset-2 text-center">
-                    <h1 class="title-underline-thick-base-color">OUTCALL MASSAGE PATTAYA</h1>
+                    <h3 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">OUTCALL MASSAGE PATTAYA</h3>
 					<p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         <i>
                             TIRED TO GOO OUT  ? LOOKING FOR  BEST OUTCALL MASSAGE/SPA SERVICES IN PATTAYA?
