--- a/index.html
+++ b/index.html
@@ -198,9 +198,7 @@
 
                         </i></p>
                     <br>
-					<br>
-					<br>
-                    <p
+					                 <p
                         class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">
                         WELCOME TO SENSATIONAL HOME SPA BY MAY, AN EXPERT OUTCALL MASSAGE SERVICES IN PATTAYA.OUTCALL MASSAGES PATTAYA PROVIDES YOU HOME/HOTEL MASSAGE SERVICES THROUGHOUT PATTAYA CITY. OUTCALL MASSAGES PATTAYA PROVIDES YOU AUTHENTIC MASSAGES/SPA  AT YOUR OWN HOME/HOTEL ROOM.
 
@@ -235,11 +233,10 @@
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h3
                         class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
-                        ABOUT MAY’s HOME SPA</h3>
+                        ABOUT OUTCALL MASSAGE SERVICES</h3>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         <i>
-                            SHS, Where Beauty Meets Relaxation. Redefining and raising standards of Outcall Massage
-                            Service.
+                            sensational home spa is pattaya based outcall massage services,where beauti meets relaxation,redefining and raising standards of outcall massage services
 
                         </i></p>
                 </div>
