--- a/index.html
+++ b/index.html
@@ -192,24 +192,23 @@
             <div class="row">
                 <div class="col-md-12 col-md-offset-2 text-center">
                     <h3 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">OUTCALL MASSAGE PATTAYA</h3>
-					<p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
+					<p class="margin-5 no-margin-bottom no-margin-rl text-large">
                         <i>
                             TIRED TO GOO OUT  ? LOOKING FOR  BEST OUTCALL MASSAGE/SPA SERVICES IN PATTAYA?
 
                         </i></p>
                     <br>
-					                 <p
-                        class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">
+					                 <p class="margin-5 no-margin-bottom no-margin-rl text-large">
                         WELCOME TO SENSATIONAL HOME SPA BY MAY, AN EXPERT OUTCALL MASSAGE SERVICES IN PATTAYA.OUTCALL MASSAGES PATTAYA PROVIDES YOU HOME/HOTEL MASSAGE SERVICES THROUGHOUT PATTAYA CITY. OUTCALL MASSAGES PATTAYA PROVIDES YOU AUTHENTIC MASSAGES/SPA  AT YOUR OWN HOME/HOTEL ROOM.
 
                     </p>
 					<br>
-					<p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">GET INTO THE GLOBE OF FRAGRANT MASSAGE THERAPY WITH OUTCALL MASSAGES PATTAYA.OUR SERVICES REVITALIZES YOUR MIND,BODY AND SOUL.OUTCALL MASSAGES PATTAYA PROVIDES YOU OPTION TO CHOOSE LADY OF YOUR OWN CHOICE FROM THE WIDE RANGE OF BEAUTIFULL ,YOUNG AND PREMIUM GIRLS. OUR GIRLS ARE READY TO SERVE YOU 24 X 7.THE MAGICAL FINGERS OF OUR BEAUTIFULL THERAPIST  MAKE YOUR MIND AND BODY COMPLETELY RELAX.</p>
+					<p class="margin-5 no-margin-bottom no-margin-rl text-large">GET INTO THE GLOBE OF FRAGRANT MASSAGE THERAPY WITH OUTCALL MASSAGES PATTAYA.OUR SERVICES REVITALIZES YOUR MIND,BODY AND SOUL.OUTCALL MASSAGES PATTAYA PROVIDES YOU OPTION TO CHOOSE LADY OF YOUR OWN CHOICE FROM THE WIDE RANGE OF BEAUTIFULL ,YOUNG AND PREMIUM GIRLS. OUR GIRLS ARE READY TO SERVE YOU 24 X 7.THE MAGICAL FINGERS OF OUR BEAUTIFULL THERAPIST  MAKE YOUR MIND AND BODY COMPLETELY RELAX.</p>
 					<br>
-					<p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">OUTCALL MASSAGES PATTAYA IS THE MOST TRENDING SERVICES WHICH PROVIDES YOU COMPLETE RELAXATION AT YOUR OWN HOTEL ROOM/HOME OR CONDO WITH COMPLETE PRIVACY.WE HAVE BUNCH OF BEAUTIFUL PATTAYA GIRLS WITH EXPERIENCE OF  5 YEARS IN DIFFERENT TYPES OF  BODY MASSAGES ,WHICH MAKES YOUR TIME MORE RELAXING AND UNFORGETTABLE.OUR PROFESSIONAL AND TRAINED THERAPIST USE AN EXTRAORDINARY & REMARKABLE MASSAGETO MAKE YOU FEEL ENTIRELY RELAXED WITH DISCREETED PRIVACY AS WELL AS COMFORT OF YOUR HOTEL/HOME ROOM.</p>
+					<p class="margin-5 no-margin-bottom no-margin-rl text-large">OUTCALL MASSAGES PATTAYA IS THE MOST TRENDING SERVICES WHICH PROVIDES YOU COMPLETE RELAXATION AT YOUR OWN HOTEL ROOM/HOME OR CONDO WITH COMPLETE PRIVACY.WE HAVE BUNCH OF BEAUTIFUL PATTAYA GIRLS WITH EXPERIENCE OF  5 YEARS IN DIFFERENT TYPES OF  BODY MASSAGES ,WHICH MAKES YOUR TIME MORE RELAXING AND UNFORGETTABLE.OUR PROFESSIONAL AND TRAINED THERAPIST USE AN EXTRAORDINARY & REMARKABLE MASSAGETO MAKE YOU FEEL ENTIRELY RELAXED WITH DISCREETED PRIVACY AS WELL AS COMFORT OF YOUR HOTEL/HOME ROOM.</p>
 					<br>
-					<p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">OUTCALL MASSAGES PATTAYA PROVIDES YOU DIFFERENT TYPES OF FULL BODY MASSAGES LIKE- THAI MASSAGE , OIL MASSAGE ,AROMA MASSAGE,BALINESE MASSAGE,COUPLE MASSAGES,TRADITIONAL FOOT  AND BACK MASSAGES.</p>
-                <p class="font-family-alt no-margin position-relative xs-text-large text-extra-large text-gray-dark-2">OUR OUTCALL MASSAGE SERVICES ARE AVAILABLE THROUGH OUT PATTAYA.AREAS INCLUDING (JOMTEIN,NAKLUA,BANG-LAMUNG,EAST ,NORTH AND SOUTH PATTAYA )OUR TOP PRIORITY IS CUSTOMER SATISFACTION.WE ARE OF THE FIRM BELIEF THAT THE IDEAL LOCATION OF A RELAXING OUTCALL MASSAGE ANS SPA IS IN THE WARMTH,SAFETY AND COMFORT OF HOME.</p>
+					<p class="margin-5 no-margin-bottom no-margin-rl text-large">OUTCALL MASSAGES PATTAYA PROVIDES YOU DIFFERENT TYPES OF FULL BODY MASSAGES LIKE- THAI MASSAGE , OIL MASSAGE ,AROMA MASSAGE,BALINESE MASSAGE,COUPLE MASSAGES,TRADITIONAL FOOT  AND BACK MASSAGES.</p>
+                <p class="margin-5 no-margin-bottom no-margin-rl text-large">OUR OUTCALL MASSAGE SERVICES ARE AVAILABLE THROUGH OUT PATTAYA.AREAS INCLUDING (JOMTEIN,NAKLUA,BANG-LAMUNG,EAST ,NORTH AND SOUTH PATTAYA )OUR TOP PRIORITY IS CUSTOMER SATISFACTION.WE ARE OF THE FIRM BELIEF THAT THE IDEAL LOCATION OF A RELAXING OUTCALL MASSAGE ANS SPA IS IN THE WARMTH,SAFETY AND COMFORT OF HOME.</p>
 				</div>
                 <!-- //.col-md-8 -->
             </div>
