--- a/index.html
+++ b/index.html
@@ -199,16 +199,16 @@
                         </i></p>
                     <br>
 					                 <p class="margin-5 no-margin-bottom no-margin-rl text-large">
-                        WELCOME TO SENSATIONAL HOME SPA BY MAY, AN EXPERT OUTCALL MASSAGE SERVICES IN PATTAYA.OUTCALL MASSAGES PATTAYA PROVIDES YOU HOME/HOTEL MASSAGE SERVICES THROUGHOUT PATTAYA CITY. OUTCALL MASSAGES PATTAYA PROVIDES YOU AUTHENTIC MASSAGES/SPA  AT YOUR OWN HOME/HOTEL ROOM.
+                        Welcome to sensational home spa by may, an expert outcall massage services in Pattaya. outcall massages pattaya provides you home/hotel massage services throughout Pattaya city. Outcall massages pattaya provides you authentic massages/spa  at your own home/hotel room.
 
                     </p>
 					<br>
-					<p class="margin-5 no-margin-bottom no-margin-rl text-large">GET INTO THE GLOBE OF FRAGRANT MASSAGE THERAPY WITH OUTCALL MASSAGES PATTAYA.OUR SERVICES REVITALIZES YOUR MIND,BODY AND SOUL.OUTCALL MASSAGES PATTAYA PROVIDES YOU OPTION TO CHOOSE LADY OF YOUR OWN CHOICE FROM THE WIDE RANGE OF BEAUTIFULL ,YOUNG AND PREMIUM GIRLS. OUR GIRLS ARE READY TO SERVE YOU 24 X 7.THE MAGICAL FINGERS OF OUR BEAUTIFULL THERAPIST  MAKE YOUR MIND AND BODY COMPLETELY RELAX.</p>
+					<p class="margin-5 no-margin-bottom no-margin-rl text-large">Get into the globe of fragrant massage therapy with outcall massages Pattaya. our services revitalizes your mind,body and soul. Outcall massages Pattaya provides you option to choose lady of your own choice from the wide range of beautifull ,young and premium girls. Our girls are ready to serve you 24 x 7.the magical fingers of our beautifull therapist  make your mind and body completely relax.</p>
 					<br>
-					<p class="margin-5 no-margin-bottom no-margin-rl text-large">OUTCALL MASSAGES PATTAYA IS THE MOST TRENDING SERVICES WHICH PROVIDES YOU COMPLETE RELAXATION AT YOUR OWN HOTEL ROOM/HOME OR CONDO WITH COMPLETE PRIVACY.WE HAVE BUNCH OF BEAUTIFUL PATTAYA GIRLS WITH EXPERIENCE OF  5 YEARS IN DIFFERENT TYPES OF  BODY MASSAGES ,WHICH MAKES YOUR TIME MORE RELAXING AND UNFORGETTABLE.OUR PROFESSIONAL AND TRAINED THERAPIST USE AN EXTRAORDINARY & REMARKABLE MASSAGETO MAKE YOU FEEL ENTIRELY RELAXED WITH DISCREETED PRIVACY AS WELL AS COMFORT OF YOUR HOTEL/HOME ROOM.</p>
+					<p class="margin-5 no-margin-bottom no-margin-rl text-large">Outcall massages Pattaya is the most trending services which provides you complete relaxation at your own hotel room/home or condo with complete privacy. We have bunch of beautiful pa ttaya girls with experience of  5 years in different types of  body massages ,which makes your time more relaxing and unforgettable. Our professional and trained therapist use an extraordinary & remarkable massage to make you feel entirely relaxed with discreeted privacy as well as comfort of your hotel/home room.</p>
 					<br>
-					<p class="margin-5 no-margin-bottom no-margin-rl text-large">OUTCALL MASSAGES PATTAYA PROVIDES YOU DIFFERENT TYPES OF FULL BODY MASSAGES LIKE- THAI MASSAGE , OIL MASSAGE ,AROMA MASSAGE,BALINESE MASSAGE,COUPLE MASSAGES,TRADITIONAL FOOT  AND BACK MASSAGES.</p>
-                <p class="margin-5 no-margin-bottom no-margin-rl text-large">OUR OUTCALL MASSAGE SERVICES ARE AVAILABLE THROUGH OUT PATTAYA.AREAS INCLUDING (JOMTEIN,NAKLUA,BANG-LAMUNG,EAST ,NORTH AND SOUTH PATTAYA )OUR TOP PRIORITY IS CUSTOMER SATISFACTION.WE ARE OF THE FIRM BELIEF THAT THE IDEAL LOCATION OF A RELAXING OUTCALL MASSAGE ANS SPA IS IN THE WARMTH,SAFETY AND COMFORT OF HOME.</p>
+					<p class="margin-5 no-margin-bottom no-margin-rl text-large">Outcall massages Pattaya provides you different types of full body massages like- thai massage, oil massage ,aroma massage,balinese massage,couple massages,traditional foot  and back massages.</p>
+                <p class="margin-5 no-margin-bottom no-margin-rl text-large">Our outcall massage services are available through out Pattaya.areas including (jomtein,naklua,bang-lamung,east ,north and south Pattaya )our top priority is customer satisfaction.we are of the firm belief that the ideal location of a relaxing outcall massage ans spa is in the warmth,safety and comfort of home.</p>
 				</div>
                 <!-- //.col-md-8 -->
             </div>
