--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -141,16 +141,16 @@
 
 
                     <ul class='margin-2 xs-text-large text-extra-large text-gray-dark-2 '>
-                        <li>Home comfort - outcall massage gives you home comfort at your home/hotel.no need to goo out.
+                        <li><strong>Home comfort -</strong> outcall massage gives you home comfort at your home/hotel.no need to goo out.
                         </li>
-                        <li>Familiar enviroment - during therapy you are in your familiar enviroment.therefore,u it
+                        <li><strong>Familiar enviroment -</strong> during therapy you are in your familiar enviroment.therefore,u it
                             makes you feel great and relaxing.</li>
-                        <li>Convinient for tourist- outcall/home massage ensures you you won't get misplaced searching
+                        <li><strong>Convinient for tourist-</strong> outcall/home massage ensures you you won't get misplaced searching
                             for the massage expert's location.we provide you services on your door step.</li>
-                        <li>Happy sleep after massage - home spa provides you professional massage at your home/hotel
+                        <li><strong>Happy sleep after massage -</strong> home spa provides you professional massage at your home/hotel
                             which gives you happy sleep immidiAtely after massage.</li>
-                        <li>Privacy discreet- home/hotel massage gives you privacy and comfort at your own place.</li>
-                        <li>Girl of your choice - outcall massage provides you pictures of all therapist.among them you
+                        <li><strong>Privacy discreet-</strong> home/hotel massage gives you privacy and comfort at your own place.</li>
+                        <li><strong>Girl of your choice -</strong> outcall massage provides you pictures of all therapist.among them you
                             can choose therapist you want.</li>
                     </ul>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">We
