--- a/body-massage-pattaya.html
+++ b/body-massage-pattaya.html
@@ -129,14 +129,14 @@
                         <i>
                             <strong>
 
-                                Best Massage in Pattaya at May’s Home Spa
+                                Best Massage in Pattaya at Outcall Massages Pattaya
 
 
                             </strong>
                         </i></p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         Whether you need someone during weekend or to rejuvenate your mind and body in the most relaxing
-                        way, but at your apartment or room, May’s Home Spa ensures you will get the best massage in
+                        way, but at your apartment or room, Outcall Massages Pattaya ensures you will get the best massage in
                         Pattaya at your home and in the professional way that you will love to get again.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">If
                         you are in Pattaya (on your holidays or trip – whether it is business trip or leisure one), your
@@ -147,7 +147,7 @@
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         <strong>Enjoy the Pleasure of Authentic Thai Massage at Home or Hotel in Pattaya</strong> </p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        May’s Home Spa offers you the pleasure of best massage in Pattaya – your dream massage that you
+                        Outcall Massages Pattaya offers you the pleasure of best massage in Pattaya – your dream massage that you
                         don’t want to miss at any cost. We provide you the pleasure of authentic Thai massage – offered
                         by trained and professional therapists.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">We
@@ -157,7 +157,7 @@
                     <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
                         <strong>Assured Satisfaction through the Best Massage in Pattaya</strong></p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        May’s Home Spa has been offering the best full body massage and best massage in Pattaya and
+                        Outcall Massages Pattaya has been offering the best full body massage and best massage in Pattaya and
                         surrounding regions for more than 10 years. Your satisfaction is a wining moment for us and we
                         never leave a stone unturned in satisfying you and achieving applaud from your end with words of
                         appreciation.</p>
