--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <title>Best Outcall Body Massage in Pattaya City & Chonburi - Sensational Home Spa by May</title>
     <meta name="description"
-       content="Sensational Home Spa - By May offers best Best outcall body massage in Pattaya& Chonburi. Call us at +66 842705334 and book our therapists and get best best outcall body spa in Pattaya.">
+        content="Sensational Home Spa - By May offers best Best outcall body massage in Pattaya& Chonburi. Call us at +66 842705334 and book our therapists and get best best outcall body spa in Pattaya.">
     <meta name="keywords"
         content="Best body massage in pattaya, Best outcall body massage in chonburi, Best outcall spa in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -100,17 +100,17 @@
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
                         href="#page-top">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="mays home spa logo"
-                            style='height: 60px'>
-                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="mays home spa logo"
-                            style='height: 60px'>
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png"
+                            alt="mays home spa logo" style='height: 60px'>
+                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png"
+                            alt="mays home spa logo" style='height: 60px'>
                     </a>
                 </div>
                 <!-- //.navbar-header -->
 
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase">
-                        <li><a href="index.html" class="page-scroll">Home</a></li>
+                        <li><a href="/" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
                         <li><a href="about-body-massage.html" class="page-scroll">body massage</a></li>
                         <li><a href="about-thai-massage.html" class="page-scroll">thai massage</a></li>
@@ -618,7 +618,8 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left triangle-base-color"></span>
 
-                            <img src="assets/images/Yukii.png" class='img-fluid' alt="Best outcall body massage in chonburi" style="width: 100%">
+                            <img src="assets/images/Yukii.png" class='img-fluid'
+                                alt="Best outcall body massage in chonburi" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -641,7 +642,8 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left triangle-base-color"></span>
 
-                            <img src="assets/images/Mew.png" class='img-fluid' alt="Best massage in chonburi" style="width: 100%">
+                            <img src="assets/images/Mew.png" class='img-fluid' alt="Best massage in chonburi"
+                                style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -664,7 +666,8 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left "></span>
 
-                            <img src="assets/images/Naam.png" class='img-fluid' alt="Best outcall spa in pattaya" style="width: 100%">
+                            <img src="assets/images/Naam.png" class='img-fluid' alt="Best outcall spa in pattaya"
+                                style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
