--- a/outcall-hotel-massage.html
+++ b/outcall-hotel-massage.html
@@ -11,7 +11,8 @@
     <title>Best Hotel Room Massages in Pattaya | Sensational home spa - By may</title>
     <meta name="description"
         content="Sensational Home Spa offers best hotel room Massage specializing in best erotic body massage in Pattaya. Call us +66 842705334 and book our therapists now.">
-    <meta name="keywords" content="Hotel massages in pattaya, Hotel room massage in pattaya, Best Erotic body massages in pattaya">
+    <meta name="keywords"
+        content="Hotel massages in pattaya, Hotel room massage in pattaya, Best Erotic body massages in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -94,17 +95,17 @@
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
                         href="http://mayshomespa.com/">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="Best hotel room massages in pattaya"
-                            style='height: 55px'>
-                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="Best Erotic body massages in pattaya"
-                            style='height: 60px'>
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png"
+                            alt="Best hotel room massages in pattaya" style='height: 55px'>
+                        <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png"
+                            alt="Best Erotic body massages in pattaya" style='height: 60px'>
                     </a>
                 </div>
                 <!-- //.navbar-header -->
 
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase text-small">
-                        <li><a href="index.html" class="page-scroll">Home</a></li>
+                        <li><a href="/" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
                         <li><a href="about-body-massage.html" class="page-scroll">body massage</a></li>
                         <li><a href="about-thai-massage.html" class="page-scroll">thai massage</a></li>
@@ -193,8 +194,8 @@
 
                 <div class="col-sm-4">
                     <div class="text-right xs-text-center">
-                        <img src="assets/images/logo/log-may-spa-black.png" class='img-fluid' alt="Hotel room massage in pattaya"
-                            style="width: 50px;">
+                        <img src="assets/images/logo/log-may-spa-black.png" class='img-fluid'
+                            alt="Hotel room massage in pattaya" style="width: 50px;">
                     </div>
                     <!-- //.footer-logo -->
                 </div>
