--- a/gallery.html
+++ b/gallery.html
@@ -157,7 +157,7 @@
 
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase ">
-                        <li><a href="index.html" class="page-scroll">Home</a></li>
+                        <li><a href="/" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
                         <li><a href="about-body-massage.html" class="page-scroll">body massage</a></li>
                         <li><a href="about-thai-massage.html" class="page-scroll">thai massage</a></li>
