--- a/our-girls.html
+++ b/our-girls.html
@@ -11,7 +11,8 @@
     <title>Beautiful Girls Massage in Pattaya | Sexy & Hot Massages in Pattaya</title>
     <meta name="description"
         content="Call us at +66 842705334 and Beautiful girls massage in pattaya now. We have the list of Hot and sexy lady who provide you Best Sexual body to body massages in pattaya">
-    <meta name="keywords" content="Best girls outcall massage, Beautifull girls massage in pattaya, Sexy lady massages in pattaya, Hot lady massage in pattaya">
+    <meta name="keywords"
+        content="Best girls outcall massage, Beautifull girls massage in pattaya, Sexy lady massages in pattaya, Hot lady massage in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -94,8 +95,8 @@
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
                         href="http://mayshomespa.com/">
-                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png" alt="Best girls outcall massage"
-                            style='height: 55px'>
+                        <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png"
+                            alt="Best girls outcall massage" style='height: 55px'>
                         <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png" alt="logo"
                             style='height: 60px'>
                     </a>
@@ -104,7 +105,7 @@
 
                 <div id="navbar-niobe" class="navbar-collapse collapse col-md-9 pull-right">
                     <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-small text-uppercase ">
-                        <li><a href="index.html" class="page-scroll">Home</a></li>
+                        <li><a href="/" class="page-scroll">Home</a></li>
                         <li><a href="services.html" class="page-scroll">Services</a></li>
                         <li><a href="about-body-massage.html" class="page-scroll">body massage</a></li>
                         <li><a href="about-thai-massage.html" class="page-scroll">thai massage</a></li>
@@ -150,7 +151,8 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left triangle-base-color"></span>
 
-                            <img src="assets/images/Yukii.png" class='img-fluid' alt="Beautiful girls massage in pattaya" style="width: 100%">
+                            <img src="assets/images/Yukii.png" class='img-fluid'
+                                alt="Beautiful girls massage in pattaya" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -173,7 +175,8 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left triangle-base-color"></span>
 
-                            <img src="assets/images/Mew.png" class='img-fluid' alt="Body to body massages in pattaya" style="width: 100%">
+                            <img src="assets/images/Mew.png" class='img-fluid' alt="Body to body massages in pattaya"
+                                style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -196,7 +199,8 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left "></span>
 
-                            <img src="assets/images/Naam.png" class='img-fluid' alt="Best Sexual body massages in pattaya" style="width: 100%">
+                            <img src="assets/images/Naam.png" class='img-fluid'
+                                alt="Best Sexual body massages in pattaya" style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -221,7 +225,8 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left "></span>
 
-                            <img src="assets/images/Saa.png" class='img-fluid' alt="Sexy lady massages in pattaya" style="width: 100%">
+                            <img src="assets/images/Saa.png" class='img-fluid' alt="Sexy lady massages in pattaya"
+                                style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
@@ -244,7 +249,8 @@
                             <span
                                 class="opacity-7 position-absolute position-top position-left triangle-top-left"></span>
 
-                            <img src="assets/images/far.png" class='img-fluid' alt="Hot lady massage in pattaya" style="width: 100%">
+                            <img src="assets/images/far.png" class='img-fluid' alt="Hot lady massage in pattaya"
+                                style="width: 100%">
                         </div>
                         <!-- //.position-relative -->
 
