--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
 
 <head>
     <meta charset="utf-8">
+    <title>Outcall Massage Pattaya | 24x7 Expert Outcall Massage Services Pattaya</title>
+    <meta name="description"
+        content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today.">
+    <meta name="keywords"
+        content="outcall massage in pattaya, best outcall massage in pattaya, home massage and spa pattaya, best massage services in pattaya, outcall massage pattaya, home massage services pattaya, mobile massage services pattaya">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
+    <!-- Loading Bootstrap CSS -->
     <link rel="shortcut icon" href="assets/images/logo/favicon-96x96.png" type="image/png">
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
 
 
     <!-- Loading Font Icons -->
