--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -111,6 +111,7 @@
                         <li><a href="hotel-room-massage-service-pattaya.html" class="page-scroll">Outcall hotel
                                 massage</a></li>
                         <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
+                        <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
                         <li><a href="index.html" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
