--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164230845-1"></script>
+
+    <script>
+
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() { dataLayer.push(arguments); }
+
+        gtag('js', new Date());
+
+
+
+        gtag('config', 'UA-164230845-1');
+
+    </script>
+
     <!-- Loading Bootstrap CSS -->
     <link rel="shortcut icon" href="assets/images/logo/favicon-96x96.png" type="image/png">
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
