--- a/our-girls.html
+++ b/our-girls.html
@@ -17,6 +17,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164230845-1"></script>
+
+    <script>
+
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() { dataLayer.push(arguments); }
+
+        gtag('js', new Date());
+
+
+
+        gtag('config', 'UA-164230845-1');
+
+    </script>
+
     <!-- Loading Bootstrap CSS -->
     <link rel="shortcut icon" href="assets/images/logo/favicon-96x96.png" type="image/png">
 
