--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 
                         <div class='col-md-10'>
                             <h2
-                                class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
-                                <b> BEST OUTCALL MASSAGE IN PATTAYA</b>
+                                class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
+                                <b>Sensational Outcall Massages Pattaya</b>
                             </h2>
 
                             <h2
