--- a/services.html
+++ b/services.html
@@ -149,12 +149,12 @@
                         </i>
                     </p>
                     <h1
-                        class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
-                        <b> BEST OUTCALL MASSAGE IN PATTAYA</b>
+                        class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
+                        <b>Sensational Outcall Massages Pattaya</b>
                     </h1>
                     <h1
-                        class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
-                        <b> BEST OUTCALL MASSAGE SERVICES</b>
+                        class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
+                        <b>Sensational Outcall Massages Pattaya</b>
                     </h1>
                 </div>
 
