text changes done

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 style='width: 40%;margin-top: 80px;' />
 
                             <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-5"
-                                style='font-family: Great Vibes, cursive;'>Sensational home spa </h2>
+                                style='font-family: Great Vibes, cursive;'>Sensational outcall massages pattaya </h2>
                             <h2 style='float:right;'
                                 class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-8'>
                                 - &nbsp;By may</h2>
@@ -175,7 +175,7 @@
                         <div class='col-md-10'>
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
-                                <b>Sensational Outcall Massages Pattaya</b>
+                                <b>An expert outcall massage and spa services in pattaya</b>
                             </h2>
 
                             <h2
