--- a/services.html
+++ b/services.html
@@ -150,12 +150,12 @@
                     </p>
                     <h1
                         class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
-                        <b>Sensational Outcall Massages Pattaya</b>
+                        <b>Types of avaliable expert outcall massage services -</b>
                     </h1>
-                    <h1
+                    <!-- <h1
                         class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
                         <b>Sensational Outcall Massages Pattaya</b>
-                    </h1>
+                    </h1> -->
                 </div>
 
                 <!-- //.col-md-6 -->
