--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Color Scheme CSS -->
     <link href="assets\css\niobe_color_pink.css" rel="stylesheet" type="text/css">
     <link href="assets\css\switch-style.css" rel="stylesheet" type="text/css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet">
 
     <style>
         .textcc {
@@ -66,11 +66,17 @@
         h2 {
             font-family: 'Great Vibes', cursive;
         }
+        .fontstyle {
+            font-family: 'Signika', sans-serif;
+        }
 
         @media (max-width: 468px) {
             .textcc {
                 font-size: 1.1rem !important;
                 text-align: center !important;
+            }
+            .mobilespa{
+                margin-top: 40px;
             }
         }
     </style>
@@ -81,7 +87,6 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'UA-156897989-1');
     </script>
 
@@ -159,11 +164,11 @@
             <div class="display-table-cell vertical-align-middle">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-11">
+                        <div class="col-md-11 mobileimg">
                             <img src='assets/images/03.png' class="img-fluid" alt='Best body massage in pattaya'
                                 style='width: 40%;margin-top: 80px;' />
 
-                            <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-5"
+                            <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
                                 style='font-family: Great Vibes, cursive;'>Sensational outcall massages pattaya </h2>
                             <h2 style='float:right;'
                                 class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-8'>
@@ -174,7 +179,7 @@
 
                         <div class='col-md-10'>
                             <h2
-                                class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
+                                class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
                                 <b>An expert outcall massage and spa services in pattaya</b>
                             </h2>
 
@@ -276,7 +281,7 @@
                         ABOUT OUTCALL MASSAGE SERVICES</h3>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         <i>
-                            sensational home spa is pattaya based outcall massage services,where beauti meets
+                            sensational outcall massage is pattaya based outcall massage services,where beauti meets
                             relaxation,redefining and raising standards of outcall massage services
 
                         </i></p>
