--- a/index.html
+++ b/index.html
@@ -70,13 +70,18 @@
             font-family: 'Signika', sans-serif;
         }
 
+        .spaimg{
+                width: 40% ;
+                margin-top: 80px;
+            }
         @media (max-width: 468px) {
             .textcc {
                 font-size: 1.1rem !important;
                 text-align: center !important;
             }
-            .mobilespa{
-                margin-top: 40px;
+            .spaimg{
+                visibility: hidden;
+
             }
         }
     </style>
@@ -165,8 +170,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-11 mobileimg">
-                            <img src='assets/images/03.png' class="img-fluid" alt='Best body massage in pattaya'
-                                style='width: 40%;margin-top: 80px;' />
+                            <img src='assets/images/03.png' class="img-fluid spaimg" alt='Best body massage in pattaya'
+                             />
 
                             <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
                                 style='font-family: Great Vibes, cursive;'>Sensational outcall massages pattaya </h2>
