--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -152,7 +152,7 @@
                         style='padding-top: 50px;'>OUTCALL/HOTEL MASSAGE</h1>
 
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        Sensational home spa is serving community from more than 5 years.our motto is to provide
+                        Sensational outcall massage/home massage and spa is serving community from more than 5 years.our motto is to provide
                         authentic services to customer at their doorstep.our trained and professional therapist makes
                         complete relaxation to customers in their own room.our lady use with authentic , herbal and skin
                         friendly massage oil for therapy.our services makes complete satisfaction to customers.
