--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                 visibility: hidden;
 
             }
+
+            .sm-title-extra-large-1{
+                        font-size: 22px !important;
+            }
         }
     </style>
 
@@ -174,7 +178,7 @@
                              />
 
                             <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
-                                style='font-family: Great Vibes, cursive;'>Sensational outcall massages pattaya </h2>
+                                style='font-family: Great Vibes, cursive;'>Sensational outcall massage pattaya </h2>
                             <h2 style='float:right;'
                                 class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-8'>
                                 - &nbsp;By may</h2>
@@ -234,7 +238,7 @@
                         </i></p>
                     <br>
                     <p class="margin-5 no-margin-bottom no-margin-rl text-large">
-                        Welcome to sensational home spa by may, an expert outcall massage services in Pattaya. outcall
+                        Welcome to sensational outcall massage/home massage and spa, an expert outcall massage services in Pattaya. outcall
                         massages pattaya provides you home/hotel massage services throughout Pattaya city. Outcall
                         massages pattaya provides you authentic massages/spa at your own home/hotel room.
 
