improvent done in viewport meta code

--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -13,7 +13,7 @@
         content="Sensational Home Spa offers best hotel room Massage in Pattaya, specializing in best room service massage in Pattaya. Call us +66 842705334 and book our therapists now.">
     <meta name="keywords"
         content="hotel massages in pattaya, hotel room massage in pattaya, room service massage in pattaya">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 
