--- a/index.html
+++ b/index.html
@@ -15,7 +15,27 @@
         content="outcall massage in pattaya, best outcall massage in pattaya, home massage and spa pattaya, best massage services in pattaya, outcall massage pattaya, home massage services pattaya, mobile massage services pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+<meta property="og:title" content="Outcall Massage Pattaya" />
+<meta property="og:description" content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today." />
+<meta property="og:url" content="https://outcallmassagespattaya.com/" />
+<meta property="og:image" content="https://outcallmassagespattaya.com/assets/images/logo/logo-may-spa.png" />
+    
     <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "url": "https://outcallmassagespattaya.com/",
+          "name": "Outcall Massage Pattaya.",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+66 842705334",
+            "contactType": "Massage service"
+          }
+        }
+        </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
