initial-scale 0.1 to 1 updated

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today.">
     <meta name="keywords"
         content="outcall massage in pattaya, best outcall massage in pattaya, home massage and spa pattaya, best massage services in pattaya, outcall massage pattaya, home massage services pattaya, mobile massage services pattaya">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
 <meta property="og:title" content="Outcall Massage Pattaya" />
 <meta property="og:description" content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today." />
 <meta property="og:url" content="https://outcallmassagespattaya.com/" />
 <meta property="og:image" content="https://outcallmassagespattaya.com/assets/images/logo/logo-may-spa.png" />
+<meta property="og:type" content="Outcall Massage Pattaya" />
     
     <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
 
